Mon Dec 15 22:42:37 2003  Tim Janik  <timj@gtk.org>

	* bsemidicontroller.c:
	* bsepcminput.c:
	* bsepcmoutput.c:
	* bsesong.c:
	* bsesource.c:
	* bsestandardosc.c:
	* bsemidiinput.c:
	* bsesubiport.c:
	* bsesuboport.c:
	* bsesubsynth.c:
	* bsesuper.c:
	* bsetrack.c:
	* bsemidisynth.c:
	* bseobject.c: flagged :skip-default: properties.

	* bseparam.c: make object properties skip-default automatically.

	* bseitem.c: skip undo recording for :skip-undo: properties.

	* bserecords.idl: provide SKIP_DEFAULT and SKIP_UNDO constants.

	* bsestorage.c: don't serialize defaulting :skip-default: properties.

	* bsetype.h: skip undo/redo for :trigger: properties.

Mon Dec 15 21:16:49 2003  Tim Janik  <timj@gtk.org>

	* bseundostack.h: remove 64bit fields from BseUndoStep data union and
	added long/ulong fields to reduce memory usage on 32bit systems.

	* bseitem.c: 
	* bsecontainer.c: use v_long/v_ulong data fields in BseUndoStep.

Mon Dec 15 16:00:48 2003  Tim Janik  <timj@gtk.org>

	* bseamplifier.idl: stripped "/Module" prefix from categories as this
	is auto-prepended by the idl compiler now and shouldn't be translated.
	completed i18n markup of info strings, streams and parameter groups.

Tue Dec  2 23:28:37 2003  Tim Janik  <timj@gtk.org>

	* bse/bseprocidl.cc: don't error out on SfiRec arguments.
	
	* bseitem.[hc]: renamed bse_item_uncross() to bse_item_uncross_links().

	* bseparasite.[hc]: implemented new undo-able parasite interface,
	which supports SfiRec as parasite data and uses a file-path alike
	nameing scheme for the parasites. storage not yet implemented.

	* bseparasite.proc: added procedures to list, set, add and get new
	parasite records.

Fri Nov 28 03:34:15 2003  Tim Janik  <timj@gtk.org>

	* tests/testcxx.cc: reenabled closure test, use BSE_TYPE_AMPLIFIER as
	test object which is implemented in c++.

Fri Nov 28 00:53:37 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Added resize() for sequences.
